<resources>
    <string name="app_name">Record Companion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings in main menu -->
    <string name="menu_patient_list">Patient List</string>

    <!-- Strings related to Settings -->
    <!-- ########################### -->

    <!-- Strings for bitalino preferences -->
    <string name="pref_header_bitalino">Bitalino</string>

    <string name="pref_bitalino_address_title">Bitalino address</string>
    <string name="pref_bitalino_address_summary">Bluetooth address of the device</string>
    <string name="pref_bitalino_address_default">98:D3:31:B1:83:A4</string>

    <string name="pref_bitalino_channel_title">Bitalino Channel</string>
    <string name="pref_bitalino_channel_summary">Channel to read</string>
    <string name="pref_bitalino_channel_default">0</string>
    <string-array name="pref_bitalino_channel_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Strings for data & sync preferences -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_sync_enable_title">Enable background sync</string>

    <string name="pref_sync_url_title">Primary database</string>
    <string name="pref_sync_url_summary">Address of the primary database server</string>
    <string name="pref_sync_url_default">http://home.boldilox.co.uk:8080</string>

    <string name="pref_sync_freq_title">Sync frequency</string>
    <string-array name="pref_sync_freq_entries">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_freq_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_patient_list">Patient List</string>
    <string name="menu_patient_list_icon">Patient list icon</string>

</resources>
