<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Enable or disable background data sync -->
    <SwitchPreference
        android:key="sync_enable"
        android:title="@string/pref_sync_enable_title"
        android:checked="false" />

    <!-- primary database server address -->
    <EditTextPreference
        android:key="sync_url"
        android:title="@string/pref_sync_url_title"
        android:summary="@string/pref_sync_url_summary"
        android:defaultValue="@string/pref_sync_url_default" />

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="sync_frequency"
        android:title="@string/pref_sync_freq_title"
        android:entries="@array/pref_sync_freq_entries"
        android:entryValues="@array/pref_sync_freq_values"
        android:defaultValue="180"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
